# music-core-full

./: .gitignore  Caddyfile  Procfile  README.md  about.md  docker-compose.deploy.yml  docker-compose.yml  ff.txt  logQuerry.txt  storage-keys-documentation.txt  test-feed.js
android-app/: app.json  eas.json  package.json
audioProcessingServer/: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
ios-app/: app.json  cesconfig.jsonc  tailwind.config.js
music-application/: .gitignore  app.json  package.json  pnpm-lock.yaml  tailwind.config.js
music-backend/: .env.example  .gitignore  Caddyfile  Dockerfile  metrics.river  package.json  pnpm-lock.yaml  postgress_ssl.pem  prisma.config.ts  setup.md  truncateRecombee.ts  tsconfig.build.json  tsconfig.json
music-backend-admin-web/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
music-frontend-web/: Dockerfile  index.html  (+2 more)
reccomendationEngine/: .env.example  Caddyfile  Dockerfile  main.py  pyproject.toml  test_recommend.py
reccomendationEngine/lib/dtos/: recommendation.py
reccomendationEngine/lib/helpers/: config.py
reccomendationEngine/lib/helpers/audio_processing/: audio.py
reccomendationEngine/lib/helpers/embeddings/: models.py
reccomendationEngine/lib/helpers/inngest/: __init__.py  client.py  functions.py
reccomendationEngine/lib/helpers/qdrant/: client.py
reccomendationEngine/lib/helpers/recombee/: client.py
reccomendationEngine/lib/helpers/storage/: s3.py
(+256 files in other folders)
